# cpp

oving2/: CMakeLists.txt  oppg1.cpp  oppg4.cpp  oppg5.cpp  oppg6.cpp  teori.txt
oving3/: CMakeLists.txt  Commodity.hpp  oppg1.cpp  oppg2.cpp  oppg3.cpp  oppg4.cpp
oving4/oppg1/: CMakeLists.txt  main.cpp
oving4/oppg2/: CMakeLists.txt  main.cpp
oving5/: CMakeLists.txt  b.cpp  main.cpp
oving6/: CMakeLists.txt  a.cpp  b.cpp
oving6vs/CMakeProject1/CMakeProject1/: CMakeLists.txt  server.cpp
oving7/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  set.cpp  set.hpp
oving8/: CMakeLists.txt  a.cpp  b.cpp
oving9/: CMakeLists.txt  eks.cpp  main.cpp
